Hiding overflow in workspace container to prevent animated resizing.

--- a/src/application-layouts/SecondaryNavigationLayout.module.scss
+++ b/src/application-layouts/SecondaryNavigationLayout.module.scss
@@ -75,6 +75,7 @@
     display: none;
     flex: 1 1 320px;
     height: 100%;
+    overflow: hidden;
     position: relative;
     z-index: 2;
 
